src/objects/Data_Mover_Scheduled_Job__c.object
<CustomObject>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <label>Creator Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Data Mover Scheduled Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Creator_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduled Job Description Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Mover Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>